--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,7 @@
         "symfony/framework-bundle": "^3.4.4 || ^4.0",
         "api-platform/core": "^2.4",
         "symfony/workflow": "^3.4 || ^4.0",
-        "symfony/validator": "^3.4 || ^4.0",
-        "myclabs/php-enum": "^1.6"
+        "symfony/validator": "^3.4 || ^4.0"
     },
     "require-dev": {
         "sensio/framework-extra-bundle": "^3.0"
