--- a/composer.json
+++ b/composer.json
@@ -15,19 +15,20 @@
         "php": "^7.1",
         "api-platform/core": "^2.4",
         "symfony/workflow": "^3.4 || ^4.0",
-        "symfony/validator": "^3.4 || ^4.0"
+        "symfony/validator": "^3.4 || ^4.0",
+        "symfony/framework-bundle": "^3.4.4 || ^4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.1"
     },
     "autoload": {
         "psr-4": {
-            "Wesnick\\Workflow\\": "src/"
+            "Wesnick\\WorkflowBundle\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Wesnick\\Workflow\\Tests\\": "tests/"
+            "Wesnick\\WorkflowBundle\\Tests\\": "tests/"
         }
     }
 }
