--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     ],
     "require": {
         "php": "^7.1",
+        "ext-json": "*",
         "api-platform/core": "^2.4",
         "symfony/workflow": "^3.4 || ^4.0",
         "symfony/validator": "^3.4 || ^4.0",
