--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "symfony/framework-bundle": "^3.4.4 || ^4.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.1"
+        "symfony/phpunit-bridge": "*",
+        "phpspec/prophecy": "^1.8"
     },
     "autoload": {
         "psr-4": {
