--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -8,10 +8,7 @@
          >
     <testsuites>
         <testsuite name="unit">
-            <directory suffix="Test.php">./tests/Unit</directory>
-        </testsuite>
-        <testsuite name="functional">
-            <directory suffix="Test.php">./tests/Functional</directory>
+            <directory suffix="Test.php">./tests</directory>
         </testsuite>
     </testsuites>
 
