--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -25,5 +25,6 @@
         <env name="KERNEL_DIR" value="./tests/Functional/Fixtures/app" />
         <env name="KERNEL_CLASS" value="AppKernel" />
         <env name="SYMFONY_DEPRECATIONS_HELPER" value="weak" />
+        <env name="SYMFONY_PHPUNIT_REMOVE" value="symfony/yaml" />
     </php>
 </phpunit>
